# hmi_agf

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.92558fc  CMakeLists.txt.user.94bc974  CTestConfiguration.ini  README.md  hmi_agf.qmlproject  hmi_agf.qmlproject.qtds  qml.qrc  qmlcomponents  qmlmodules
atomic_configure/: .rosinstall
catkin_generated/: generate_cached_setup.py  setup_cached.sh
content/: App.qml  CMakeLists.txt  EditBuffer.qml  Mission.qml  Screen01.qml  Screen01_copy.ui.qml  component_test.ui.qml  component_test_2.ui.qml
content/asset/: triangle
devel/: .catkin  local_setup.sh  setup.sh
imports/: CMakeLists.txt
imports/hmi_agf/: CMakeLists.txt  qmldir
imports/hmi_agf/designer/: plugin.metainfo
launch/: node.launch
src/: backend.cpp  import_qml_plugins.h  main.cpp
src/include/: backend.h  config.json  config_manager.h  model.h  model_buffer.h  model_pallet.h  model_queue.h
